# SAM-Med3D

./: gt_embeds.pt  pyproject.toml
segment_anything/: build_sam3D_definite.py  maskDecoder.py
segment_anything/SAMMed3D/: __init__.py  image_encoder3D.py  position_embedding_random.py
utils/: infer_utils_modified.py
