[project]
name = "sam-med3d"
version = "0.1.0"
description = ""
authors = [
    {name = "Chengrun",email = "fitzlihm00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "torch (==2.6.0)",
    "torchvision (==0.21.0)",
    "torchaudio (==2.6.0)",
    "torchio (>=0.20.8,<0.21.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "prefetch-generator (>=1.0.3,<2.0.0)",
    "monai (>=1.4.0,<2.0.0)",
    "edt (>=3.0.0,<4.0.0)",
    "surface-distance (>=0.1,<0.2)",
    "huggingface-hub (>=0.32.1,<0.33.0)",
    "debugpy (>=1.8.14,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
